--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>NFT Project</title>
-    <meta name="description" content="AVAX Babes minting website" />
+    <title>Monkey</title>
+    <meta name="description" content="Eth minting website" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
